<?xml version="1.0"?>
<package format="2">
  <name>nmea_socket_pub</name>
  <version>0.0.0</version>
  <description>The nmea_socket_pub package</description>


  <maintainer email="cjdevitt@gmail.com">chase</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python-pynmea2</exec_depend>
  <exec_depend>python-socket</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->

</package>
